# Projects

./: README.md  db.sqlite3  gayathri_personal_ssh  gayathri_personal_ssh.pub  pyproject.toml
config/: settings.py  urls.py
store_admin/: __init__.py  apps.py  urls.py  views.py
store_admin/templates/: base.html
store_admin/templates/cotton/: button.html  card.html
store_admin/templates/cotton/auth/: forgot.html  login.html  reset.html
store_admin/templates/cotton/layouts/: base.html
store_admin/templates/cotton/pages/: components.html  dashboard.html  notifications.html  orders-dispatched.html  orders-undispatched.html  products-form.html  products-list.html  reports.html  settings.html
store_admin/templates/cotton/shell/: sidebar.html  topnav.html
store_admin/templates/cotton/ui/: delete-modal.html  demo-modal.html  report-modal.html  toast.html
store_admin/templates/static/css/: threadline.css
store_admin/templates/static/script/: admin-app.js
store_admin/templates/store_admin/: index.html
